--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 
-    <title>Your Name</title>
+    <title>SIMRS MATA</title>
 
     <link rel="manifest" href="manifest.json" />
   </head>
@@ -40,13 +40,13 @@
     <script>
       // Your web app's Firebase configuration
       var firebaseConfig = {
-        apiKey: "AIzaSyCVlvXiDjJPGcgKBQ-sIpBkU-4R5c8ZO5Y",
-        authDomain: "pro-landing-page.firebaseapp.com",
-        projectId: "pro-landing-page",
-        storageBucket: "pro-landing-page.appspot.com",
-        messagingSenderId: "1092735037662",
-        appId: "1:1092735037662:web:0e05b97305b32f5f4f124f",
-        measurementId: "G-PSZBYZGCZR"
+        apiKey: "AIzaSyBaai4C9fKoqC3D9qliR4fD9qpzXJz_tcY",
+        authDomain: "simrs-mata.firebaseapp.com",
+        projectId: "simrs-mata",
+        storageBucket: "simrs-mata.appspot.com",
+        messagingSenderId: "354411545878",
+        appId: "1:354411545878:web:f15ca1057a4ddc1ede3c37",
+        measurementId: "G-H60QGJSQDD"
       };
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
